--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -25,57 +25,70 @@
                 </form>
             </section>
 
-            <div class="container" style="padding: 20px;">
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <% for (let i=0; i < discountProducts.length; i++ ) { %>
-                            <% if (i==0) { %>
-                                <li data-target="#myCarousel" class="active"></li>
-                                <% } else { %>
-                                    <li data-target="#myCarousel"></li>
+
+            <div id="carouselFade" class="carousel slide carousel-fade" data-bs-ride="carousel"
+                style="padding-right: 100px; padding-left: 100px;">
+                <div class="carousel-indicators">
+                    <% for( let i=0; i < discountProducts.length; i++ ) { %>
+                        <% if (i==0) { %>
+                            <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="0" class="active"
+                                aria-current="true" aria-label="Slide 1"></button>
+                            <% }else{ %>
+                                <button type="button" data-bs-target="#carouselFade" data-bs-slide-to="<%= i %>"
+                                    aria-label="Slide <%= i+1 %> "></button>
+                                <% } %>
                                     <% } %>
-                                        <% } %>
-                    </ol>
+                </div>
+                <div class="carousel-inner">
+                    <% for( let i=0; i < discountProducts.length; i++ ) { %>
+                        <% if (i==0) { %>
+                            <div class="carousel-item active" data-bs-interval="2000">
+                                <a href="/products/productdetail/<%= discountProducts[i].id %>"><img
+                                        src="/images/products/<%= discountProducts[i].image %>"
+                                        alt="<%= discountProducts[i].name %>" style="width:60%;"
+                                        class="d-block w-100"></a>
+                                <div class="carousel-caption d-none d-md-block"
+                                    style="color:rgb(179, 42, 42); background-color: rgba(255, 255, 255, 0.783);">
+                                    <h3>
+                                        <%= discountProducts[i].name %>
+                                    </h3>
+                                </div>
+                            </div>
 
-                    <div class="carousel-inner">
-                        <% for (let i=0; i < discountProducts.length; i++ ) { %>
-                            <% if (i==0) { %>
-
-                                <div class="item active">
+                            <% }else{ %>
+                                <div class="carousel-item">
                                     <a href="/products/productdetail/<%= discountProducts[i].id %>"><img
                                             src="/images/products/<%= discountProducts[i].image %>"
-                                            alt="<%= discountProducts[i].name %>" style="width:100%;"></a>
-                                    <div class="carousel-caption">
+                                            alt="<%= discountProducts[i].name %>" style="width:100%;"
+                                            class="d-block w-100"></a>
+                                    <div class="carousel-caption d-none d-md-block"
+                                        style="color:rgb(179, 42, 42); background-color: rgba(255, 255, 255, 0.783);">
                                         <h3>
                                             <%= discountProducts[i].name %>
                                         </h3>
                                     </div>
                                 </div>
-                                <% } else { %>
-                                    <div class="item">
-                                        <a href="/products/productdetail/<%= discountProducts[i].id %>"></a><img
-                                            src="/images/products/<%= discountProducts[i].image %>"
-                                            alt="<%= discountProducts[i].name %>" style="width:100%;"></a>
-                                        <div class="carousel-caption">
+                                <% } %>
+                                    <% } %>
+
+
+                                        <% for( let i=0; i < discountProducts.length; i++ ) { %>
                                             <h3>
                                                 <%= discountProducts[i].name %>
                                             </h3>
-                                        </div>
-                                    </div>
-                                    <% } %>
-                                        <% } %>
 
-                    </div>
+                                            <% } %>
 
-                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+
                 </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselFade" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselFade" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+
+                </button>
             </div>
 
         </div>
