--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -18,7 +18,7 @@
                 <br>
                 <h2>Bienvenido <%= user.firstName %>
                 </h2>
-                <img src="/images/users/<%= user.image %>" alt="Imagen de usuario">
+                <img src="/images/users/<%= user.image %>" alt="Imagen de usuario" style="width: 50%;">
                 <div>
                     <%= user.email %>
                 </div>
