--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -48,9 +48,21 @@
                     </div>
                     <br>
                     <div>
-                        <form action="/cart" method="POST" class="formregister">
-                            <button type="submit" class="button">Agregar al carrito</button>
-                        </form>
+
+                        <% if (locals.isLogged && locals.userLogged.role==9) { %>
+                            <form action="/products/delete/<%= product.id %>" method="POST">
+                                <button type="submit" class="button">Eliminar</button>
+                            </form>
+                            <form action="/products/edit/<%= product.id %>" method="GET">
+                                <button type="submit" class="button">Editar</button>
+                            </form>
+                            <%}else{%>
+                                <form action="/products/cart" method="GET">
+                                    <button type="submit" class="button">Agregar al carrito</button>
+                                </form>
+
+                                <%} %>
+
                     </div>
                 </section>
             </article>
