--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -10,21 +10,21 @@
     <header>
         <%- include ("./partials/header") %>
     </header>
-    <main>
-        <div>
-            <section>
-                <form action="/" method="POST" class="form">
-                    <input type="text" name="destino" required placeholder="¿A donde quiere ir?">
-                    <br>
-                    <label for="date">Fecha de entrada</label>
-                    <input type="date" name="date" required>
-                    <br>
-                    <label for="date">Fecha de salida</label>
-                    <input type="date" name="date" required>
-                    <button type="submit">Buscar</button>
-                </form>
-            </section>
+    <main class="homeMain">
 
+        <div class="datesHome">
+            <form action="/" method="POST" class="form">
+                <input type="text" name="destino" required placeholder="¿A donde quiere ir?">
+                <br>
+                <label for="date">Fecha de entrada</label>
+                <input type="date" name="date" required>
+                <br>
+                <label for="date">Fecha de salida</label>
+                <input type="date" name="date" required>
+                <button type="submit">Buscar</button>
+            </form>
+        </div>
+        <div class="carousel">
 
             <div id="carouselFade" class="carousel slide carousel-fade" data-bs-ride="carousel"
                 style="padding-right: 100px; padding-left: 100px;">
@@ -40,13 +40,15 @@
                                     <% } %>
                 </div>
                 <div class="carousel-inner">
+
                     <% for( let i=0; i < discountProducts.length; i++ ) { %>
                         <% if (i==0) { %>
+
                             <div class="carousel-item active" data-bs-interval="2000">
-                                <a href="/products/productdetail/<%= discountProducts[i].id %>"><img
+                                <a href="/products/detail/<%= discountProducts[i].id %>"><img
                                         src="/images/products/<%= discountProducts[i].image %>"
-                                        alt="<%= discountProducts[i].name %>" style="width:60%;"
-                                        class="d-block w-100"></a>
+                                        alt="<%= discountProducts[i].name %>" style="width:60%;" class="d-block w-100">
+                                </a>
                                 <div class="carousel-caption d-none d-md-block"
                                     style="color:rgb(179, 42, 42); background-color: rgba(255, 255, 255, 0.783);">
                                     <h3>
@@ -57,7 +59,7 @@
 
                             <% }else{ %>
                                 <div class="carousel-item">
-                                    <a href="/products/productdetail/<%= discountProducts[i].id %>"><img
+                                    <a href="/products/detail/<%= discountProducts[i].id %>"><img
                                             src="/images/products/<%= discountProducts[i].image %>"
                                             alt="<%= discountProducts[i].name %>" style="width:100%;"
                                             class="d-block w-100"></a>
@@ -72,12 +74,6 @@
                                     <% } %>
 
 
-                                        <% for( let i=0; i < discountProducts.length; i++ ) { %>
-                                            <h3>
-                                                <%= discountProducts[i].name %>
-                                            </h3>
-
-                                            <% } %>
 
 
                 </div>
@@ -98,5 +94,6 @@
     </footer>
 
 </body>
+
 
 </html>
