DB Sequelize / CRUD products - users

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -12,9 +12,8 @@
     </header>
     <main class="homeMain">
         <div>
-            <form action="/" method="POST" class="formHome">
-                <input type="text" name="destino" required placeholder="¿A donde quiere ir?"
-                    style="text-align: center;">
+            <form action="/products" method="POST" class="formHome">
+                <input type="text" name="search" required placeholder="¿A donde quiere ir?" style="text-align: center;">
                 <br>
                 <button type="submit">Buscar</button>
             </form>
