--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -29,7 +29,7 @@
                         </h2>
                     </div>
                     <div>
-                        <%= product.description %>
+                        <%= product.hotel.description %>
                     </div>
                     <br>
                     <div>
