--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,7 +25,7 @@ background-color: black;
 }
 main {
     margin: 0 auto;
-    background-color: #000000;
+    background-color: rgb(65, 65, 65)
 
 }
 
