--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -47,8 +47,8 @@
 
 
             </ul>
-            <form>
-                <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+            <form action="/products" method="POST">
+                <input class="form-control" type="text" name="search" placeholder="Search" aria-label="Search">
             </form>
         </div>
 
