--- a/src/views/products/edit.ejs
+++ b/src/views/products/edit.ejs
@@ -15,79 +15,155 @@
             <% if (product !=undefined ) {%>
                 <form action="/products/edit/<%=product.id%>?_method=PUT" method="POST" class='form'>
                     <h3>Editar Articulo</h3>
+                    <% if (locals.errors && errors.hotel_id) { %>
+                        <div class="formError">
+                            <%= errors.hotel_id.msg %>
+                                <i class="fas fa-exclamation" style="font-size: 20px; margin-left: 5px;"></i>
+                        </div>
+                        <% } %>
+                            <select name="hotel_id" id="hotel_id" required>
 
-                    <select name="hotel_id" id="hotel_id" required>
-
-                        <option value="<%= hotels.id %>" selected>
-                            <%= hotels.name %>
-                        </option>
+                                <option value="<%= hotels.id %>" selected>
+                                    <%= hotels.name %>
+                                </option>
 
 
-                    </select>
-                    <select name="roomType_id" id="roomType_id" required>
-                        <option disabled> -- Seleccione tipo de habitación -- </option>
-                        <% for( let i=0; i < types.length; i++ ) { %>
+                            </select>
+                            <% if (locals.errors && errors.roomType_id) { %>
+                                <div class="formError">
+                                    <%= errors.roomType_id.msg %>
+                                        <i class="fas fa-exclamation" style="font-size: 20px; margin-left: 5px;"></i>
+                                </div>
+                                <% } %>
+                                    <select name="roomType_id" id="roomType_id" required>
+                                        <option disabled> -- Seleccione tipo de habitación -- </option>
+                                        <% for( let i=0; i < types.length; i++ ) { %>
 
-                            <option value="<%= types[i].id %>" <%=types[i].type==product.roomType.type ? 'selected' :
-                                null %> >
-                                <%= types[i].type %>
-                            </option>
-                            <% } %>
+                                            <option value="<%= types[i].id %>" <%=types[i].type==product.roomType.type
+                                                ? 'selected' : null %> >
+                                                <%= types[i].type %>
+                                            </option>
+                                            <% } %>
 
-                    </select>
-                    <select name="roomCategory_id" id="roomCategory_id" required>
-                        <option disabled> -- Seleccione categoria de habitación -- </option>
-                        <% for( let i=0; i < categories.length; i++ ) { %>
+                                    </select>
+                                    <% if (locals.errors && errors.roomCategory_id) { %>
+                                        <div class="formError">
+                                            <%= errors.roomCategory_id.msg %>
+                                                <i class="fas fa-exclamation"
+                                                    style="font-size: 20px; margin-left: 5px;"></i>
+                                        </div>
+                                        <% } %>
+                                            <select name="roomCategory_id" id="roomCategory_id" required>
+                                                <option disabled> -- Seleccione categoria de habitación -- </option>
+                                                <% for( let i=0; i < categories.length; i++ ) { %>
 
-                            <option value="<%= categories[i].id %>"
-                                <%=categories[i].category==product.roomCategory.category ? 'selected' : null %> >
-                                <%= categories[i].category %>
-                            </option>
-                            <% } %>
+                                                    <option value="<%= categories[i].id %>"
+                                                        <%=categories[i].category==product.roomCategory.category
+                                                        ? 'selected' : null %>
+                                                        >
+                                                        <%= categories[i].category %>
+                                                    </option>
+                                                    <% } %>
 
-                    </select>
+                                            </select>
+                                            <% if (locals.errors && errors.price) { %>
+                                                <div class="formError">
+                                                    <%= errors.price.msg %>
+                                                        <i class="fas fa-exclamation"
+                                                            style="font-size: 20px; margin-left: 5px;"></i>
+                                                </div>
+                                                <% } %>
+                                                    <input type="number" name="price" placeholder="Precio"
+                                                        value="<%= product.price %>">
+                                                    <% if (locals.errors && errors.discountRate) { %>
+                                                        <div class="formError">
+                                                            <%= errors.discountRate.msg %>
+                                                                <i class="fas fa-exclamation"
+                                                                    style="font-size: 20px; margin-left: 5px;"></i>
+                                                        </div>
+                                                        <% } %>
+                                                            <input type="text" name="discountRate"
+                                                                placeholder="Descuento"
+                                                                value="<%= product.discountRate %>">
 
-                    <input type="number" name="price" required placeholder="Precio" value="<%= product.price %>">
-
-                    <input type="text" name="discountRate" required placeholder="Descuento"
-                        value="<%= product.discountRate %>">
-
-                    <button type="submit">Editar</button>
+                                                            <button type="submit">Editar</button>
                 </form>
                 <% } else { %>
                     <form action="/products/store" method="POST" enctype="multipart/form-data" class="form">
                         <h3>Crear Articulo</h3>
-                        <select name="hotel_id" id="hotel_id" required>
-                            <option disabled selected> -- Seleccione un hotel -- </option>
-                            <% for( let i=0; i < hotels.length; i++ ) { %>
-                                <option value="<%= hotels[i].id %>">
-                                    <%= hotels[i].name %>
-                                </option>
-                                <% } %>
+                        <% if (locals.errors && errors.hotel_id) { %>
+                            <div class="formError">
+                                <%= errors.hotel_id.msg %>
+                                    <i class="fas fa-exclamation" style="font-size: 20px; margin-left: 5px;"></i>
+                            </div>
+                            <% } %>
+                                <select name="hotel_id" id="hotel_id" required>
+                                    <option disabled selected> -- Seleccione un hotel -- </option>
+                                    <% for( let i=0; i < hotels.length; i++ ) { %>
+                                        <option value="<%= hotels[i].id %>" <%=locals.oldData &&
+                                            locals.oldData.hotel_id==hotels[i].id ? 'selected' : null %>>
+                                            <%= hotels[i].name %>
+                                        </option>
+                                        <% } %>
 
-                        </select>
-                        <select name="roomType_id" id="roomType_id" required>
-                            <option disabled selected> -- Seleccione tipo de habitación -- </option>
-                            <% for( let i=0; i < types.length; i++ ) { %>
-                                <option value="<%= types[i].id %>">
-                                    <%= types[i].type %>
-                                </option>
-                                <% } %>
+                                </select>
+                                <% if (locals.errors && errors.roomType_id) { %>
+                                    <div class="formError">
+                                        <%= errors.roomType_id.msg %>
+                                            <i class="fas fa-exclamation"
+                                                style="font-size: 20px; margin-left: 5px;"></i>
+                                    </div>
+                                    <% } %>
+                                        <select name="roomType_id" id="roomType_id" required>
+                                            <option disabled selected> -- Seleccione tipo de habitación -- </option>
+                                            <% for( let i=0; i < types.length; i++ ) { %>
+                                                <option value="<%= types[i].id %>" <%=locals.oldData &&
+                                                    locals.oldData.roomType_id==types[i].id ? 'selected' : null %>>
+                                                    <%= types[i].type %>
+                                                </option>
+                                                <% } %>
 
-                        </select>
-                        <select name="roomCategory_id" id="roomCategory_id" required>
-                            <option disabled selected> -- Seleccione categoria de habitación -- </option>
-                            <% for( let i=0; i < categories.length; i++ ) { %>
-                                <option value="<%= categories[i].id %>">
-                                    <%= categories[i].category %>
-                                </option>
-                                <% } %>
+                                        </select>
+                                        <% if (locals.errors && errors.roomCategory_id) { %>
+                                            <div class="formError">
+                                                <%= errors.roomCategory_id.msg %>
+                                                    <i class="fas fa-exclamation"
+                                                        style="font-size: 20px; margin-left: 5px;"></i>
+                                            </div>
+                                            <% } %>
+                                                <select name="roomCategory_id" id="roomCategory_id" required>
+                                                    <option disabled selected> -- Seleccione categoria de habitación --
+                                                    </option>
+                                                    <% for( let i=0; i < categories.length; i++ ) { %>
+                                                        <option value="<%= categories[i].id %>" <%=locals.oldData &&
+                                                            locals.oldData.roomCategory_id==categories[i].id
+                                                            ? 'selected' : null %>>
+                                                            <%= categories[i].category %>
+                                                        </option>
+                                                        <% } %>
 
-                        </select>
-                        <input type="number" name="price" required placeholder="Precio">
-                        <input type="text" name="discountRate" required placeholder="Descuento">
-                        <!-- <input type="file" name="image" accept=".jpg" required placeholder="Imagen"> -->
-                        <button type="submit">Crear</button>
+                                                </select>
+                                                <% if (locals.errors && errors.price) { %>
+                                                    <div class="formError">
+                                                        <%= errors.price.msg %>
+                                                            <i class="fas fa-exclamation"
+                                                                style="font-size: 20px; margin-left: 5px;"></i>
+                                                    </div>
+                                                    <% } %>
+                                                        <input type="number" name="price" placeholder="Precio" required
+                                                            value="<%= locals.oldData && locals.oldData.price ? locals.oldData.price : null %>">
+                                                        <% if (locals.errors && errors.discountRate) { %>
+                                                            <div class="formError">
+                                                                <%= errors.discountRate.msg %>
+                                                                    <i class="fas fa-exclamation"
+                                                                        style="font-size: 20px; margin-left: 5px;"></i>
+                                                            </div>
+                                                            <% } %>
+                                                                <input type="text" name="discountRate" required
+                                                                    placeholder="Descuento"
+                                                                    value="<%= locals.oldData && locals.oldData.discountRate ? locals.oldData.discountRate : null %>">
+                                                                <!-- <input type="file" name="image" accept=".jpg" required placeholder="Imagen"> -->
+                                                                <button type="submit">Crear</button>
                     </form>
                     <% } %>
 
