--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -64,7 +64,12 @@
                                 <button type="submit" class="button">Editar</button>
                             </form>
                             <%}else{%>
-                                <form action="/products/cart" method="GET">
+                                <form action="/products/cart" method="POST">
+                                    <label for="dateIn">Fecha de Ingreso:</label>
+                                    <input type="date" id="inDate" name="inDate" min="2021-11-01" max="2030-12-31">
+                                    <label for="dateIn">Fecha de Salida:</label>
+                                    <input type="date" id="outDate" name="outDate" min="2021-11-01" max="2030-12-31">
+                                    <input type="number" id="id" name="id" value="<%= product.id  %>" hidden>
                                     <button type="submit" class="button">Agregar al carrito</button>
                                 </form>
 
