--- a/NodeJS/src/views/products/cart.ejs
+++ b/NodeJS/src/views/products/cart.ejs
@@ -45,7 +45,7 @@
                                     Categoría de Hotel: <%= cartItems[i].products.roomCategory_id %>
                                 </div>
                                 <br>
-                                <div>Tarifa por noche: USD <%= cartItems[i].products.price %>
+                                <div>Tarifa por noche: ARS <%= cartItems[i].products.price %>
 
                                 </div>
                                 <br>
