--- a/NodeJS/src/views/products/detail.ejs
+++ b/NodeJS/src/views/products/detail.ejs
@@ -49,7 +49,7 @@
                         Ciudad: <%= city.city %>
                     </div>
                     <br>
-                    <div>Tarifa por noche: USD <%= product.price %>
+                    <div>Tarifa por noche: ARS <%= product.price %>
                     </div>
                     <br>
                     <div>Descuento: <%= product.discountRate %>%
