--- a/NodeJS/src/views/products/products.ejs
+++ b/NodeJS/src/views/products/products.ejs
@@ -43,7 +43,7 @@
                             Ciudad: <%= products[i].hotel.cities.city %>
                         </div>
                         <br>
-                        <div>Tarifa por noche: USD <%= products[i].price %>
+                        <div>Tarifa por noche: ARS <%= products[i].price %>
                         </div>
                         <br>
                         <div>
